--- a/Introduction to python.ipynb
+++ b/Introduction to python.ipynb
@@ -249,6 +249,442 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#Rules for variable creation\n",
+    "\n",
+    "#variable can be combination of alphabets/numbers/_ \n",
+    "#No special chars\n",
+    "\n",
+    "#It should start with _ or alphabet\n",
+    "#It should not start with number\n",
+    "\n",
+    "#It's case senstive\n",
+    "\n",
+    "#key words should nt be used, user def fun/inbuilt function name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# /   //  %  ** differenct between operators \n",
+    "    \n",
+    "#/  ==> division \n",
+    "#// ===> decimal , rounds the nearest \n",
+    "#% ==> modulo \n",
+    "#** ==> power"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n",
+      "7\n",
+      "30\n",
+      "3.3333333333333335\n",
+      "3\n",
+      "-4\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 3\n",
+    "\n",
+    "print(a+b)\n",
+    "print(a-b)\n",
+    "print(a*b)\n",
+    "print(a/b)\n",
+    "print(a//b)\n",
+    "\n",
+    "c = -10\n",
+    "d = 3\n",
+    "\n",
+    "print(c // d)\n",
+    "\n",
+    "#Floor division\n",
+    "\n",
+    "#divison\n",
+    "#\n",
+    "\n",
+    "-4 -3 -2 -1 0 1 2 3 4 \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 3\n",
+    "\n",
+    "print(a**b)#power operation\n",
+    "\n",
+    "print(a%b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function ==> set of repeated code\n",
+    "\n",
+    "#Inbuilt ===> user defined function\n",
+    "\n",
+    "#function def \n",
+    "#function call"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-17-d2a3b4f7b761>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-17-d2a3b4f7b761>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    10a = \"python\"\u001b[0m\n\u001b[1;37m      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibo():#user defined function\n",
+    "    a = \"python\"\n",
+    "    b = \"world\"\n",
+    "    return a[::-2] + b[::2]\n",
+    "\n",
+    "def fibo1():#user defined function\n",
+    "    a = \"python\"\n",
+    "    b = \"world\"\n",
+    "    return a[::-2] + b[::2]\n",
+    "\n",
+    "fibo()\n",
+    "fibo1()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello world\")#inbuilt function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#interpreter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print\n",
+    "#type\n",
+    "#single line comment \n",
+    "#Multi line comment or doc strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "hello\n",
+      "welcome to python\n",
+      "world \n",
+      "this is class 2\n",
+      "welcome to python\n",
+      "world \n",
+      "this is class 2\n",
+      "I'm fine\n",
+      "I'm fine\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello\")\n",
+    "\n",
+    "print('hello')\n",
+    "\n",
+    "print('''welcome to python\n",
+    "world \n",
+    "this is class 2''')\n",
+    "\n",
+    "print(\"\"\"welcome to python\n",
+    "world \n",
+    "this is class 2\"\"\")\n",
+    "\n",
+    "print(\"I'm fine\")\n",
+    "\n",
+    "print('I\\'m fine') #escape seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'str'>\n",
+      "<class 'bool'>\n",
+      "<class 'bool'>\n",
+      "100.99\n"
+     ]
+    }
+   ],
+   "source": [
+    "#type function\n",
+    "\n",
+    "#inbuilt function ==> data type or data strucuture of the arg\n",
+    "\n",
+    "a = 10\n",
+    "\n",
+    "print(a)\n",
+    "print(type(a))\n",
+    "\n",
+    "b = 10.00\n",
+    "\n",
+    "print(type(b))\n",
+    "\n",
+    "c= \"10.99\"\n",
+    "\n",
+    "print(type(c))\n",
+    "\n",
+    "#string ===> \" \" or ' ' ==> global data type\n",
+    "\n",
+    "d = True\n",
+    "print(type(d))\n",
+    "\n",
+    "e = False\n",
+    "print(type(e))\n",
+    "\n",
+    "false = 100.99\n",
+    "\n",
+    "print(false)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "If condition\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 20\n",
+    "\n",
+    "print(a<b)\n",
+    "\n",
+    "if a < b:\n",
+    "    print(\"If condition\")\n",
+    "else:\n",
+    "    print(\"else\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "\n",
+    "a = \"python\"\n",
+    "\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Conversion table\n",
+    "\n",
+    "#tuple ==> immutable\n",
+    "\n",
+    "a = (10,20)\n",
+    "\n",
+    "print(type(a))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#Variable creation\n",
+    "a = 10\n",
+    "b = 20\n",
+    "\n",
+    "#Addition operation\n",
+    "print(a+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "If condition\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 20\n",
+    "\n",
+    "print(a<b)\n",
+    "\n",
+    "'''\n",
+    "Condition to check a and b\n",
+    "if a is lower b value will execute\n",
+    "otherwise else block will execute\n",
+    "'''\n",
+    "\n",
+    "if a < b:\n",
+    "    print(\"If condition\")\n",
+    "else:\n",
+    "    print(\"else\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#data type conversion\n",
+    "\n",
+    "a = 10.00\n",
+    "print(type(a))\n",
+    "\n",
+    "b = int(a)\n",
+    "print(type(b))\n",
+    "\n",
+    "#int something in to integer\n",
+    "#float something in to float\n",
+    "#bool something in to bool\n",
+    "#str something to string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = False\n",
+    "b = int(a)\n",
+    "\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
