--- a/Introduction to python.ipynb
+++ b/Introduction to python.ipynb
@@ -685,6 +685,387 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#input function\n",
+    "#format function\n",
+    "#string indexing\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n",
+      "19.0\n",
+      "True\n",
+      "19\n",
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "#input function\n",
+    "\n",
+    "#int something in to integer\n",
+    "#float something in to float\n",
+    "#bool something in to bool\n",
+    "#str something to string\n",
+    "\n",
+    "\n",
+    "a = \"10.00\" #str to float\n",
+    "\n",
+    "print(float(a))\n",
+    "\n",
+    "#a = \"python\" #str\n",
+    "\n",
+    "#print(float(a))\n",
+    "\n",
+    "a = 19.00\n",
+    "\n",
+    "print(str(a))\n",
+    "print(bool(a))\n",
+    "print(int(a))\n",
+    "\n",
+    "\n",
+    "#string ===> global datatype\n",
+    "\n",
+    "a = 19\n",
+    "print(str(a))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python\n",
+      "<class 'str'>\n",
+      "please enter a string valuemathematics\n",
+      "mathematics\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#input function\n",
+    "\n",
+    "#yaml / xml / json\n",
+    "\n",
+    "a = \"python\" #static\n",
+    "\n",
+    "print(a)\n",
+    "\n",
+    "print(type(a))\n",
+    "\n",
+    "b = input(\"please enter a string value\")\n",
+    "\n",
+    "print(b)\n",
+    "\n",
+    "print(type(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please enter a integer valuepython\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'python'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-9b0cf5528268>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"please enter a integer value\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#string data type\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'python'"
+     ]
+    }
+   ],
+   "source": [
+    "b = int(input(\"please enter a integer value\")) #string data type\n",
+    "\n",
+    "print(b)\n",
+    "\n",
+    "print(type(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please enter a integer value10.999\n",
+      "10.999\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = float(input(\"please enter a integer value\")) #string data type\n",
+    "\n",
+    "print(b)\n",
+    "\n",
+    "print(type(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please enter a integer valueTrue\n",
+      "True\n",
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = bool(input(\"please enter a integer value\")) #string data type\n",
+    "\n",
+    "print(b)\n",
+    "\n",
+    "print(type(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please enter a int value 10\n",
+      "please enter a int value 10.99\n",
+      "20.990000000000002\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"please enter a int value \")) #int\n",
+    "b = float(input(\"please enter a int value \"))\n",
+    "\n",
+    "c = a + b\n",
+    "\n",
+    "print(c)\n",
+    "print(int(c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "314.0\n",
+      "Area of circle:  314.0\n",
+      "Area of circle with radius 10 is 314.0\n",
+      "Area of circle with radius 10 is 314.0\n",
+      "Area of circle with radius 10 is 314.0\n",
+      "Area of circle with radius 10is 314.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#format\n",
+    "pi = 3.14\n",
+    "radius = 10\n",
+    "\n",
+    "Area = pi * radius * radius\n",
+    "\n",
+    "print(Area)\n",
+    "print(\"Area of circle: \", Area) #format\n",
+    "print(\"Area of circle with radius {} is {}\".format(radius,Area))\n",
+    "print(\"Area of circle with radius {0} is {1}\".format(radius,Area))\n",
+    "print(\"Area of circle with radius {1} is {0}\".format(Area,radius))\n",
+    "print(\"Area of circle with radius \" + str(radius) + \"is \" + str(Area) ) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "#() ==> function call\n",
+    "\n",
+    "print(\"Hello\")\n",
+    "\n",
+    "#Indexing \n",
+    "\n",
+    "[] ==> square\n",
+    "\n",
+    "#Format \n",
+    "\n",
+    "{} ==> format method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\n",
+      "h\n",
+      "h\n",
+      "o\n",
+      "t\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Indexing\n",
+    "\n",
+    "#Forward indexing\n",
+    "#reverse indexing\n",
+    "\n",
+    "a = \"python\" #string #list of chars\n",
+    "\n",
+    "print(a[0])\n",
+    "print(a[-3])\n",
+    "print(a[3])\n",
+    "print(a[4])\n",
+    "print(a[2])\n",
+    "#print(a[::-1])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ytho\n",
+      "ython\n",
+      "pyth\n",
+      "python\n",
+      "python\n",
+      "yth\n",
+      "ytho\n"
+     ]
+    }
+   ],
+   "source": [
+    "#slicing\n",
+    "\n",
+    "#[starting index (include): ending index (exclude): Interval(optional)]\n",
+    "\n",
+    "\n",
+    "a = \"python\"\n",
+    "\n",
+    "print(a[1:5])\n",
+    "print(a[1:])\n",
+    "print(a[:4]) #0123\n",
+    "print(a)\n",
+    "print(a[:])\n",
+    "\n",
+    "print(a[-5:-2])\n",
+    "\n",
+    "print(a[-5:5])\n",
+    "\n",
+    "#how to print last letter in a string string[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ter\n",
+      "ter\n",
+      "ter\n",
+      "ter\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"computer_science\"\n",
+    "\n",
+    "print(a[5:8])\n",
+    "print(a[-11:-8])\n",
+    "print(a[5:-8])\n",
+    "print(a[-11:8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "string index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-43-95c35075c6d8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"computer\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m: string index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"computer\"\n",
+    "\n",
+    "print(a[10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
