--- a/String Indexing and slicing.ipynb
+++ b/String Indexing and slicing.ipynb
@@ -92,10 +92,10 @@
     "#reverse + negative ===> output\n",
     "\n",
     "\n",
-    "print(value1[3:8:2])\n",
+    "print(value1[3:8:2]) #puter #ptr\n",
     "print(value1[8:3:2])\n",
     "print(value1[3:8:-2])\n",
-    "print(value1[8:3:-2])"
+    "print(value1[8:3:-2]) #_retu #_eu"
    ]
   },
   {
@@ -152,6 +152,103 @@
     "ie\n",
     "empty\n",
     "empty\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cmue\n",
+      "enis\n",
+      "_cec\n",
+      "_eumc\n",
+      "ees\n",
+      "cpe\n",
+      "_ic\n",
+      "_tm\n"
+     ]
+    }
+   ],
+   "source": [
+    "#type4:\n",
+    "\n",
+    "\n",
+    "var = \"computer_science\"\n",
+    "\n",
+    "print(var[:8:2])\n",
+    "print(var[:8:-2])\n",
+    "print(var[8::2])\n",
+    "print(var[8::-2])\n",
+    "print(var[:8:-3])\n",
+    "print(var[:8:3])\n",
+    "print(var[8::3])\n",
+    "print(var[8::-3])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmue\n",
+    "enis\n",
+    "_cec\n",
+    "_eumc\n",
+    "ees\n",
+    "cpe\n",
+    "_ic\n",
+    "_tm\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computer_science\n",
+      "cmue_cec\n",
+      "cpesee\n",
+      "ecneics_retupmoc\n",
+      "enisrtpo\n",
+      "eesepc\n"
+     ]
+    }
+   ],
+   "source": [
+    "#type5:\n",
+    "\n",
+    "var = \"computer_science\"\n",
+    "\n",
+    "print(var[::1])\n",
+    "print(var[::2])\n",
+    "print(var[::3])\n",
+    "print(var[::-1])\n",
+    "print(var[::-2])\n",
+    "print(var[::-3])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "computer_science\n",
+    "cmie_cec\n",
+    "cpesee\n",
+    "ecneics_retupmoc\n",
+    "enisrtpo\n",
+    "eesepc\n"
    ]
   }
  ],
