--- a/String Methods _ Strings.ipynb
+++ b/String Methods _ Strings.ipynb
@@ -76,14 +76,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30\n"
+      "python7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"python\" + str(7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'z' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-32-51f7d8c95c20>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m15\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mz\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'z' is not defined"
      ]
     }
    ],
@@ -92,7 +113,7 @@
     "a = 10\n",
     "x = 5\n",
     "y = 15\n",
-    "print(a + x + y)"
+    "print(a + x + z)"
    ]
   },
   {
@@ -701,13 +722,7 @@
       "asyncio             idlelib             pytest_astropy_header win32job\n",
       "asyncore            idna                pytest_doctestplus  win32lz\n",
       "atexit              imageio             pytest_openfiles    win32net\n",
-      "atomicwrites        imagesize           pytest_remotedata   win32netcon\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "atomicwrites        imagesize           pytest_remotedata   win32netcon\n",
       "attr                imaplib             pythoncom           win32pdh\n",
       "audioop             imghdr              pytz                win32pdhquery\n",
       "autopep8            imp                 pywin               win32pdhutil\n",
@@ -776,6 +791,102 @@
    "source": [
     "print(help(\"modules\")) #inbuilt module"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#membership operator\n",
+    "\n",
+    "a = \"python\"\n",
+    "b = \"py\"\n",
+    "\n",
+    "print(b in a)\n",
+    "print(\"gr\" in \"grrovy\")\n",
+    "print(\"hh\" in \"python\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#assignment\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#len\n",
+    "\n",
+    "a = \"python\"\n",
+    "\n",
+    "print(len(a))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#collect one string from user\n",
+    "#Identify middle character of the string\n",
+    "\n",
+    "a = \"cpp\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
