--- a/Python Datastructures.ipynb
+++ b/Python Datastructures.ipynb
@@ -321,21 +321,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10, 11, 12, 13, 15]\n"
+      "[10, 11, 12, 13, 15, 14]\n"
      ]
     }
    ],
    "source": [
     "#remove\n",
     "\n",
-    "a = [10,11,12,13,14,15]\n",
+    "a = [10,11,12,13,14,15,14]\n",
     "\n",
     "a.remove(14)\n",
     "\n",
@@ -391,12 +391,317 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['aaa', 'bbb', 'python', 'dddd']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#replacement / assignment\n",
+    "\n",
+    "Li1 = [\"aaa\", \"bbb\", \"ccc\", \"dddd\"]\n",
+    "\n",
+    "Li1[2] = \"python\"\n",
+    "\n",
+    "print(Li1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-94033a12e244>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"python\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"z\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "#string #mutation #https://www.hackerrank.com/challenges/python-mutations/problem\n",
+    "\n",
+    "a = \"python\"\n",
+    "\n",
+    "a[2] = \"z\"\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#count\n",
+    "\n",
+    "Li1 = [1,2,3,4,1,1,1,1,3]\n",
+    "\n",
+    "print(Li1.count(1))\n",
+    "print(Li1.count(4))\n",
+    "print(Li1.count(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "0 is not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-4f02ec38a0a8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mLi1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mLi1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: 0 is not in list"
+     ]
+    }
+   ],
+   "source": [
+    "#index\n",
+    "\n",
+    "Li1 = [1,2,3,4,-1,-2,-3]\n",
+    "\n",
+    "print(Li1.index(4))\n",
+    "print(Li1.index(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, -1, -2, -3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#extend\n",
+    "\n",
+    "Li1 = [1,2,3,4]\n",
+    "Li2 = [-1,-2,-3]\n",
+    "\n",
+    "Li1.extend(Li2)\n",
+    "print(Li1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#clear\n",
+    "\n",
+    "Li1 = [3,4,5,6,7]\n",
+    "\n",
+    "Li1.clear()\n",
+    "print(Li1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-2, -1, 0, 3, 4, 5]\n",
+      "[5, 4, 3, 0, -1, -2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sort\n",
+    "\n",
+    "Li1 = [3,4,5,-1,-2,0]\n",
+    "Li1.sort()\n",
+    "print(Li1)\n",
+    "\n",
+    "Li1 = [3,4,5,-1,-2,0]\n",
+    "Li1.sort(reverse=True)\n",
+    "print(Li1)\n",
+    "\n",
+    "#Sorting techniques\n",
+    "#Tim sort ==> combination of insertions and merge sort\n",
+    "\n",
+    "#https://www.geeksforgeeks.org/timsort/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 8, 2, 3, 6, 5, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#reverse\n",
+    "\n",
+    "Li1 = [4,5,6,3,2,8,0]\n",
+    "Li1.reverse()\n",
+    "print(Li1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2\n",
+      "3\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#min max sum\n",
+    "\n",
+    "Li1 = [1,2,3,0,-1,-2]\n",
+    "print(min(Li1))\n",
+    "print(max(Li1))\n",
+    "print(sum(Li1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#del\n",
+    "\n",
+    "Li1 = [3,4,5,6,7]\n",
+    "\n",
+    "del Li1[2:]\n",
+    "\n",
+    "print(Li1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Li1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-18-aa76de7c9e2e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0mLi1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mLi1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'Li1' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "Li1 = [3,4,5,6]\n",
+    "del Li1\n",
+    "\n",
+    "print(Li1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Li1 = [3,4,5,6]\n",
+    "del Li1[:] #clear\n",
+    "\n",
+    "print(Li1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#replacement\n",
-    "\n"
+    "#copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#nested list"
    ]
   }
  ],
