--- a/Python Datastructures.ipynb
+++ b/Python Datastructures.ipynb
@@ -43,12 +43,15 @@
     "\n",
     "[]\n",
     "Ordered/Indexed  datastrucut\n",
+    "Mutable\n",
+    "+ operator supports (concatenatiomn)\n",
     "\n",
     "#tuple\n",
     "\n",
     "()\n",
     "Ordered/Indexed  datastrucut\n",
     "immutable data structures\n",
+    "+ operator supports (concatenatiomn)\n",
     "\n",
     "#set\n",
     "\n",
@@ -688,11 +691,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1390331518472\n",
+      "1390331518472\n",
+      "[2, 3, 1, 5, 100, 6]\n",
+      "[2, 3, 1, 5, 100, 6]\n",
+      "1390331517640\n",
+      "1390330599880\n",
+      "[2, 3, 1, 5, 4, 6]\n",
+      "[2, 3, 1, 5, 100, 6]\n"
+     ]
+    }
+   ],
    "source": [
-    "#copy"
+    "#copy\n",
+    "\n",
+    "#Shallow copy\n",
+    "\n",
+    "Li1 = [2,3,1,5,4,6]\n",
+    "print(id(Li1))\n",
+    "\n",
+    "Li2 = Li1\n",
+    "print(id(Li2))\n",
+    "\n",
+    "Li2[4] = 100\n",
+    "\n",
+    "print(Li1)\n",
+    "print(Li2)\n",
+    "#============================\n",
+    "\n",
+    "Li1 = [2,3,1,5,4,6]\n",
+    "print(id(Li1))\n",
+    "\n",
+    "Li2 = Li1.copy() #Deep copy\n",
+    "print(id(Li2))\n",
+    "\n",
+    "Li2[4] = 100\n",
+    "\n",
+    "print(Li1)\n",
+    "print(Li2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, [101, 102, 103, 105, [201, 202, 203, 204, [304, 305, 305, 'python', ['groovy'], [20, 21], [31, 32], [41, 42]]]]]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#nested list\n",
+    "\n",
+    "a = [1,2,3,4,5,[101,102,103,105,[201,202,203,204,[304,305,305,\"python\",[\"groovy\"],[20,21],[31,32],[41,42]]]]]\n",
+    "\n",
+    "print(a)\n",
+    "print(type(a))\n",
+    "\n",
+    "#305\n",
+    "#202\n",
+    "#41\n",
+    "#oovy\n",
+    "#yth\n",
+    "#32\n",
+    "#42\n",
+    "#20\n",
+    "#4\n",
+    "#105\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tuple "
    ]
   },
   {
@@ -701,7 +785,320 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#nested list"
+    "#charact\n",
+    "\n",
+    "#Immutable Ds\n",
+    "#Indexed or ordered \n",
+    "#()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "()\n",
+      "<class 'tuple'>\n",
+      "()\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#()\n",
+    "\n",
+    "#empty tuple\n",
+    "\n",
+    "\n",
+    "tup = ()\n",
+    "print(tup)\n",
+    "print(type(tup))\n",
+    "\n",
+    "tup1 = tuple()\n",
+    "print(tup1)\n",
+    "print(type(tup1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 6)\n",
+      "7\n",
+      "4\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Indexed or Ordered\n",
+    "\n",
+    "tup = (3,4,5,6,7)\n",
+    "\n",
+    "print(tup[2:4])\n",
+    "print(tup[-1])\n",
+    "print(tup[-4])\n",
+    "print(tup[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 100, 6]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-65d2b915c996>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mtup1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mtup1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtup1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "#immutable\n",
+    "\n",
+    "Li1 = [3,4,5,6]\n",
+    "Li1[2] = 100\n",
+    "print(Li1)\n",
+    "\n",
+    "tup1 = (3,4,5,6)\n",
+    "tup1[2] = 100\n",
+    "print(tup1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "tuple.index(x): x not in tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-12-5797ba57a02a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mtup1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m11\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m13\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtup1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtup1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: tuple.index(x): x not in tuple"
+     ]
+    }
+   ],
+   "source": [
+    "#Tuple Methods\n",
+    "\n",
+    "#index\n",
+    "\n",
+    "tup1 = (10,11,12,13)\n",
+    "print(tup1.index(12))\n",
+    "print(tup1.index(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#count\n",
+    "\n",
+    "tup1 = (1,2,3,4,4,3,2,1,1,1,1)\n",
+    "print(tup1.count(4))\n",
+    "print(tup1.count(-2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 5, 6, 3, 4, 2, 5, 6, 7)\n",
+      "(1, 2, 3, 5, 6, 3, 4, 2, 5, 6, 7, 10, 11, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#concatenation\n",
+    "\n",
+    "tup1 = (1,2,3,5,6)\n",
+    "tup2 = (3,4,2,5,6,7)\n",
+    "\n",
+    "tup1 = tup1 + tup2\n",
+    "print(tup1)\n",
+    "tup3 = tup1 + (10,11,12)\n",
+    "print(tup3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(tup3))\n",
+    "\n",
+    "#function inbuilt function\n",
+    "\n",
+    "#method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Chara\n",
+    "\n",
+    "#{} and individual elements\n",
+    "#unordered or no indexing\n",
+    "#mutable \n",
+    "#It doesn't support duplicates\n",
+    "#Does not support + or concatenation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n",
+      "<class 'set'>\n",
+      "{}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Empty set\n",
+    "\n",
+    "set1 = set()\n",
+    "print(set1)\n",
+    "print(type(set1))\n",
+    "\n",
+    "set2 = {}\n",
+    "print(set2)\n",
+    "print(type(set2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'set' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-18-cca6c1495f35>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mset1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mset1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mset1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'set' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "set1 = {2,3,4,5}\n",
+    "print(set1[0])\n",
+    "print(set1[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1 = {1,1,2,3,4,5,6,3,4,4,5}\n",
+    "\n",
+    "print(set1)\n",
+    "\n",
+    "#set allows only unique values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#union\n",
+    "#intersection\n",
+    "#difference\n",
+    "#subset\n",
+    "#symmetric difference\n",
+    "#super set\n",
+    "#Disjoint\n",
+    "#\n",
+    "\n",
+    "#https://www.w3schools.com/python/python_ref_set.asp"
    ]
   }
  ],
