--- a/Python Datastructures.ipynb
+++ b/Python Datastructures.ipynb
@@ -45,6 +45,7 @@
     "Ordered/Indexed  datastrucut\n",
     "Mutable\n",
     "+ operator supports (concatenatiomn)\n",
+    "Allows duplicates\n",
     "\n",
     "#tuple\n",
     "\n",
@@ -52,6 +53,7 @@
     "Ordered/Indexed  datastrucut\n",
     "immutable data structures\n",
     "+ operator supports (concatenatiomn)\n",
+    "Allows duplicates\n",
     "\n",
     "#set\n",
     "\n",
@@ -60,12 +62,45 @@
     "No indexing or ordering\n",
     "Mutable\n",
     "+ operator not supports (concatenatiomn)\n",
+    "No duplicates\n",
     "\n",
     "#Dictionary\n",
     "{:}\n",
-    "No indexing or ordering\n",
+    "No indexing or ordering ==> key = index\n",
     "Mutable\n",
-    "+ operator not supports (concatenatiomn)"
+    "+ operator not supports (concatenatiomn)\n",
+    "duplicate keys are not allowed but values are allowed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n",
+      "(0, 2, 3, 4, 5, 0)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'set' and 'set'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-49c84cadada5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m}\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'set' and 'set'"
+     ]
+    }
+   ],
+   "source": [
+    "print([1,2,3] + [4,5,6])\n",
+    "print((0,2,3) + (4,5,0))\n",
+    "print({1,2} + {3,4,5})"
    ]
   },
   {
@@ -834,6 +869,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12, 13, 14, 15)\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 12,13,14,15\n",
+    "\n",
+    "print(a)\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12,)\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = (12,)\n",
+    "\n",
+    "print(a)\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -1339,13 +1416,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "None\n",
       "{0, 1, 2, 3, 4, 5, 6, 7, 8}\n"
      ]
     }
@@ -1583,7 +1661,12 @@
     "\n",
     "a.symmetric_difference_update(b)\n",
     "\n",
-    "print(a)"
+    "print(a)\n",
+    "\n",
+    "\n",
+    "#isdisjoint\n",
+    "#issuperset\n",
+    "#issubset"
    ]
   },
   {
@@ -1923,6 +2006,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 'python', 3: 'go', 4: 5.5, 10: [1, 2, 3, 4, 5, {1, 2, 3, 4}, (3, 4, 2)], -2: True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict2 = {1: 1, 2:\"python\", 3:\"go\", 4:5.5, 10:[1,2,3,4,5,{1,2,3,4},(3,4,2)], -2:True}\n",
+    "print(dict2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
@@ -2024,7 +2126,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = [5,6,7,3,2,1,0,3]\n",
+    "\n",
+    "#even \n",
+    "#[0,1,2,3,3,5,6,7]\n",
+    "#Identify middle two elements\n",
+    "#Find average of two elements\n",
+    "#3+3/2 ===> 3\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [5,6,7,3,2,1,0,3,10]\n",
+    "\n",
+    "#Odd\n",
+    "#sort it\n",
+    "\n",
+    "#[0,1,2,3,3,5,6,7,10]\n",
+    "#identify the middle element ===> 3"
+   ]
   },
   {
    "cell_type": "code",
@@ -2039,6 +2166,77 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 0, -9, 3, 4, 5, 2)\n",
+      "{0, 1, 2, 3, 4, 5, -9}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Conversion of tuple to list\n",
+    "#list to tuple\n",
+    "\n",
+    "\n",
+    "a = [1,2,3,4,0,-9,3,4,5,2]\n",
+    "\n",
+    "print(tuple(a))\n",
+    "print(set(a))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: ['english', 'maths', 'science'], 2: [10, 20, 30], 3: ['bio-botany', 'bio-zoology', 'Algebra']}\n",
+      "[10, 20, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict1 = {1:[\"english\",\"maths\",\"science\"], 2:[10,20,30], 3:[\"bio-botany\",\"bio-zoology\",\"Algebra\"]}\n",
+    "\n",
+    "print(dict1)\n",
+    "print(dict1[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65\n",
+      "90\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ord(\"A\"))\n",
+    "print(ord(\"Z\"))\n",
+    "\n",
+    "#chr\n",
+    "\n",
+    "print(chr(100))"
+   ]
   },
   {
    "cell_type": "code",
