--- a/Conditional Statements.ipynb
+++ b/Conditional Statements.ipynb
@@ -384,6 +384,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please enter your age: 19\n",
+      "please enter your state: AND\n",
+      "your age is greater than 18\n",
+      "you are not eligible due to state restrictions\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = int(input(\"please enter your age: \"))\n",
+    "your_state = input(\"please enter your state: \")\n",
+    "state = [\"TN\", \"KL\", \"MAL\"]\n",
+    "\n",
+    "\n",
+    "if age > 18:\n",
+    "    print(\"your age is greater than 18\")\n",
+    "    if your_state in state:\n",
+    "        print(\"You are eligibel for voting\")\n",
+    "    else:\n",
+    "        print(\"you are not eligible due to state restrictions\")\n",
+    "else:\n",
+    "    print(\"you are not eligible due to age restrictions\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
