--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -395,11 +395,531 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## while loops"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "while <boolean data type or condition>:\n",
+    "    <code 1>\n",
+    "    <code 2>\n",
+    "    \n",
+    "    <break point or condition breaker>\n",
+    "    \n",
+    "Entry point: condition pass (True)\n",
+    "Exit point: condition fail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current a value is  10\n",
+      "The current a value is  11\n",
+      "The current a value is  12\n",
+      "The current a value is  13\n",
+      "The current a value is  14\n",
+      "The current a value is  15\n",
+      "The current a value is  16\n",
+      "The current a value is  17\n",
+      "The current a value is  18\n",
+      "The current a value is  19\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "\n",
+    "while a < 20:\n",
+    "    print(\"The current a value is \", a)\n",
+    "    #a = a + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    <code 1>\n",
+    "    <code 2>\n",
+    "    <.....>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current a value is  20\n",
+      "The current a value is  19\n",
+      "The current a value is  18\n",
+      "The current a value is  17\n",
+      "The current a value is  16\n",
+      "The current a value is  15\n",
+      "The current a value is  14\n",
+      "The current a value is  13\n",
+      "The current a value is  12\n",
+      "The current a value is  11\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 20\n",
+    "\n",
+    "while a > 10:\n",
+    "    print(\"The current a value is \", a)\n",
+    "    a = a -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "inside for loop\n",
+      "11\n",
+      "inside for loop\n",
+      "12\n",
+      "inside for loop\n",
+      "13\n",
+      "inside for loop\n",
+      "14\n",
+      "inside for loop\n",
+      "inside for loop if condition\n",
+      "16\n",
+      "inside for loop\n",
+      "17\n",
+      "inside for loop\n",
+      "inside for loop if condition\n",
+      "19\n",
+      "inside for loop\n",
+      "20\n",
+      "inside for loop\n",
+      "21\n",
+      "inside for loop\n",
+      "22\n",
+      "inside for loop\n",
+      "23\n",
+      "inside for loop\n",
+      "24\n",
+      "inside for loop\n",
+      "25\n",
+      "inside for loop\n",
+      "26\n",
+      "inside for loop\n",
+      "27\n",
+      "inside for loop\n",
+      "28\n",
+      "inside for loop\n",
+      "29\n",
+      "inside for loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "## continue break pass\n",
+    "\n",
+    "#continue ==> skip the loop for certain iterations \n",
+    "\n",
+    "for i in range(10,30):\n",
+    "    if i == 15 or i == 18:\n",
+    "        print(\"inside for loop if condition\")\n",
+    "        continue\n",
+    "    print(i)\n",
+    "    print(\"inside for loop\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "inside for loop\n",
+      "11\n",
+      "inside for loop\n",
+      "12\n",
+      "inside for loop\n",
+      "13\n",
+      "inside for loop\n",
+      "14\n",
+      "inside for loop\n",
+      "inside for loop if condition\n"
+     ]
+    }
+   ],
+   "source": [
+    "#break ===> for breaking complete loop after certain condition\n",
+    "\n",
+    "for i in range(10,30):\n",
+    "    if i == 15 or i == 18:\n",
+    "        print(\"inside for loop if condition\")\n",
+    "        break\n",
+    "    print(i)\n",
+    "    print(\"inside for loop\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "inside for loop\n",
+      "11\n",
+      "inside for loop\n",
+      "12\n",
+      "inside for loop\n",
+      "13\n",
+      "inside for loop\n",
+      "14\n",
+      "inside for loop\n",
+      "inside for loop if condition\n",
+      "15\n",
+      "inside for loop\n",
+      "16\n",
+      "inside for loop\n",
+      "17\n",
+      "inside for loop\n",
+      "inside for loop if condition\n",
+      "18\n",
+      "inside for loop\n",
+      "19\n",
+      "inside for loop\n",
+      "20\n",
+      "inside for loop\n",
+      "21\n",
+      "inside for loop\n",
+      "22\n",
+      "inside for loop\n",
+      "23\n",
+      "inside for loop\n",
+      "24\n",
+      "inside for loop\n",
+      "25\n",
+      "inside for loop\n",
+      "26\n",
+      "inside for loop\n",
+      "27\n",
+      "inside for loop\n",
+      "28\n",
+      "inside for loop\n",
+      "29\n",
+      "inside for loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "#pass ===> line filler \n",
+    "\n",
+    "for i in range(10,30):\n",
+    "    if i == 15 or i == 18:\n",
+    "        print(\"inside for loop if condition\")\n",
+    "        pass\n",
+    "    print(i)\n",
+    "    print(\"inside for loop\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of a:  11\n",
+      "The value of a:  12\n",
+      "The value of a:  13\n",
+      "The value of a:  14\n"
+     ]
+    }
+   ],
+   "source": [
+    "#while break and continue\n",
+    "\n",
+    "a = 10\n",
+    "\n",
+    "while a < 20:\n",
+    "    a = a + 1\n",
+    "    if a == 15:\n",
+    "        break\n",
+    "    print(\"The value of a: \", a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n\n",
+      "o\n",
+      "h\n",
+      "t\n",
+      "y\n",
+      "p\n",
+      "n\n",
+      "o\n",
+      "h\n",
+      "t\n",
+      "y\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"python\"\n",
+    "val = len(a)\n",
+    "\n",
+    "while True:\n",
+    "    print(a[val-1])\n",
+    "    val = val - 1 \n",
+    "    if val == -5:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n\n",
+      "o\n",
+      "h\n",
+      "t\n",
+      "y\n",
+      "p\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in a[::-1]:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 0\n",
+    "\n",
+    "while a:\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "failure\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 0\n",
+    "\n",
+    "print(bool(a))\n",
+    "\n",
+    "if a:\n",
+    "    print(\"success\")\n",
+    "else:\n",
+    "    print(\"failure\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#while with condition\n",
+    "\n",
+    "#while with True\n",
+    "\n",
+    "#while with a variable other than False or o or boolean False output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "For else\n",
+    "While else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inside for loop\n",
+      "the iteration value is 10\n",
+      "Inside for loop\n",
+      "the iteration value is 11\n",
+      "Inside for loop\n",
+      "the iteration value is 12\n",
+      "Inside for loop\n",
+      "the iteration value is 13\n",
+      "Inside for loop\n",
+      "the iteration value is 14\n",
+      "Inside for loop and if\n",
+      "Inside for loop\n",
+      "the iteration value is 16\n",
+      "Inside for loop\n",
+      "the iteration value is 17\n",
+      "Inside for loop\n",
+      "the iteration value is 18\n",
+      "Inside for loop\n",
+      "the iteration value is 19\n",
+      "Inside for loop\n",
+      "the iteration value is 20\n",
+      "Inside for loop\n",
+      "the iteration value is 21\n",
+      "Inside for loop\n",
+      "the iteration value is 22\n",
+      "Inside for loop\n",
+      "the iteration value is 23\n",
+      "Inside for loop\n",
+      "the iteration value is 24\n",
+      "Inside for loop\n",
+      "the iteration value is 25\n",
+      "Inside for loop\n",
+      "the iteration value is 26\n",
+      "Inside for loop\n",
+      "the iteration value is 27\n",
+      "Inside for loop\n",
+      "the iteration value is 28\n",
+      "Inside for loop\n",
+      "the iteration value is 29\n",
+      "The complete iteration is done\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10,30):\n",
+    "    if i == 15:\n",
+    "        print(\"Inside for loop and if\")\n",
+    "        break\n",
+    "    print(\"Inside for loop\")\n",
+    "    print(\"the iteration value is\", i)\n",
+    "else:\n",
+    "    print(\"The complete iteration is done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inside for loop\n",
+      "the iteration value is 10\n",
+      "Inside for loop\n",
+      "the iteration value is 11\n",
+      "Inside for loop\n",
+      "the iteration value is 12\n",
+      "Inside for loop\n",
+      "the iteration value is 13\n",
+      "Inside for loop\n",
+      "the iteration value is 14\n",
+      "Inside for loop and if\n",
+      "Inside for loop\n",
+      "the iteration value is 15\n",
+      "Inside for loop\n",
+      "the iteration value is 16\n",
+      "Inside for loop\n",
+      "the iteration value is 17\n",
+      "The complete iteration is done\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10,18):\n",
+    "    if i == 15:\n",
+    "        print(\"Inside for loop and if\")\n",
+    "    print(\"Inside for loop\")\n",
+    "    print(\"the iteration value is\", i)\n",
+    "else:\n",
+    "    print(\"The complete iteration is done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#break and else ===> if and else\n",
+    "\n",
+    "#break ===> (breaking loop) or not executing all iteration No else\n",
+    "#All the iterations happened properly ==> else part will execute"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#while else\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
