--- a/Modules.ipynb
+++ b/Modules.ipynb
@@ -192,13 +192,7 @@
       "asyncio             idlelib             pytest_astropy_header win32job\n",
       "asyncore            idna                pytest_doctestplus  win32lz\n",
       "atexit              imageio             pytest_openfiles    win32net\n",
-      "atomicwrites        imagesize           pytest_remotedata   win32netcon\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "atomicwrites        imagesize           pytest_remotedata   win32netcon\n",
       "attr                imaplib             pythoncom           win32pdh\n",
       "audioop             imghdr              pytz                win32pdhquery\n",
       "autopep8            imp                 pywin               win32pdhutil\n",
@@ -370,8 +364,110 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%.2f"
+    "#math\n",
+    "#statistics\n",
+    "#os\n",
+    "#sys\n",
+    "\n",
+    "#json, csv,pandas, xml ===> handling specific files\n",
+    "\n",
+    "#thread, logging \n",
+    "\n",
+    "\n",
+    "#re ===> regular expression\n",
+    "#collections \n",
+    "#datetime \n",
+    "\n",
+    "Visualisations\n",
+    "#seaborn, matplotlib, ggplot, \n",
+    "\n",
+    "#Login and execute operations libraries"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import statistics\n",
+    "\n",
+    "print(statistics.median([4,5,6,7,3,2,9,10]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## User def modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import python_october_batch2_module as user_module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "497664\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(user_module.function1(12,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pythonnohtyp\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(user_module.function2(\"python\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import python_october_batch2_module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
