--- a/Anonymous functions & comprehensions.ipynb
+++ b/Anonymous functions & comprehensions.ipynb
@@ -391,6 +391,7 @@
     }
    ],
    "source": [
+    "#set comprehension\n",
     "Li1 = [3,4,5,6,7,10]\n",
     "\n",
     "Li2 = {i**2 for i in Li1}\n",
@@ -412,6 +413,7 @@
     }
    ],
    "source": [
+    "#Dictionary comprehension\n",
     "Li1 = [3,4,5,6,7,10]\n",
     "\n",
     "Li2 = {i:i**2 for i in Li1}\n",
@@ -433,6 +435,7 @@
     }
    ],
    "source": [
+    "#Tuple comprehension (generator creation to tuple)\n",
     "Li1 = [3,4,5,6,7,10]\n",
     "\n",
     "Li2 = tuple(i**2 for i in Li1)\n",
